--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-dark px-3 py-3">
+<nav class="navbar navbar-expand-md bg-custom px-3 py-3">
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="#">EnelG</a>
 
