--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,42 +1,87 @@
-<div class="bg container-fluid bg-black">
-  <div class="row px-5 d-flex justify-content-center">
-    <div class="col-6">
-      <div class="text-bg-dark mt-5 rounded-2">
-        <form #loginForm="ngForm" (ngSubmit)="login(loginForm)" class="p-5">
-          <div class="mb-3">
-            <label for="email" class="form-label fw-bold">Email</label>
-            <input
-              type="text"
-              class="form-control bg-secondary border-0"
-              id="email"
-              name="email"
-              ngModel
-              required
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label fw-bold">Password</label>
-            <input
-              type="password"
-              class="form-control bg-secondary border-0"
-              id="password"
-              name="password"
-              [minlength]="6"
-              ngModel
-              required
-            />
-          </div>
+<div class="bg container-fluid">
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 col-md-8 bg-custom mt-5 rounded-4 py-5">
+      <div class="row">
+        <h2 class="px-5 text-white text-center">
+          Welcome Back<span class="text-info">!</span>
+        </h2>
+        <p class="m-0 text-secondary text-center fs-6">
+          Not a member?
+          <span
+            id="register-redirect"
+            class="pointer text-info"
+            (click)="goRegister()"
+            >Create an account</span
+          >
+        </p>
+        <div class="col-12 d-flex justify-content-center">
+          <form
+            #loginForm="ngForm"
+            (ngSubmit)="login(loginForm)"
+            class="p-5 form-size w-100"
+          >
+            <div class="mb-3">
+              <label for="email" class="form-label text-info">Email</label>
+              <div class="position-relative">
+                <div class="position-absolute end-0 mt-1 me-2">
+                  <i class="fa-solid fa-envelope text-info"></i>
+                </div>
+                <input
+                  type="text"
+                  class="form-control border-0"
+                  id="email"
+                  name="email"
+                  ngModel
+                  required
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label text-info"
+                >Password</label
+              >
+              <div class="position-relative">
+                <div class="position-absolute end-0 mt-1 me-2">
+                  <button
+                    type="button"
+                    class="btn p-0 m-0"
+                    (mousedown)="showPasswordOrNot()"
+                    [class.hide]="showPassword"
+                  >
+                    <i class="fa-solid fa-eye text-info"></i>
+                  </button>
+                  <button
+                    type="button"
+                    class="btn p-0 m-0"
+                    (mouseup)="showPasswordOrNot()"
+                    [class.hide]="!showPassword"
+                  >
+                    <i class="fa-solid fa-eye-slash text-info"></i>
+                  </button>
+                </div>
+                <input
+                  [type]="showPassword ? 'text' : 'password'"
+                  class="form-control border-0"
+                  id="password"
+                  name="password"
+                  [minlength]="8"
+                  ngModel
+                  required
+                />
+              </div>
+            </div>
 
-          <div class="d-flex justify-content-center">
-            <button
-              type="submit"
-              class="btn btn-danger px-5 fw-bold"
-              [disabled]="loginForm.invalid"
-            >
-              Login
-            </button>
-          </div>
-        </form>
+            <div class="d-flex justify-content-center">
+              <button
+                type="submit"
+                class="btn btn-outline-info px-5 fw-bold"
+                [disabled]="loginForm.invalid"
+              >
+                Login
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
