--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+.bg-custom {
+  background-color: #1f2125;
+}
+
+.bg-crema {
+  background-color: #f6f6f6;
+}
