--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -11,8 +11,17 @@
 
   <div class="row">
     <div class="col-8 d-flex flex-column mx-5 position-relative">
-      <div class="bg-white rounded-4 mt-5 flex-grow-1 box-square">
-        <h5 class="text-light p-5">Invoice</h5>
+      <div
+        class="bg-white rounded-4 mt-5 flex-grow-1 box-square d-flex align-items-baseline p-3"
+      >
+        <h3 class="text-dark p-3">Invoice</h3>
+        <h3 class="p-3 text-primary">#1304-0000bd</h3>
+        <h5 class="p-3 text-secondary">for</h5>
+        <h3 class="text-dark p-3">$2472.38</h3>
+        <div>
+          <button type="button" class="btn btn-outline-dark">Dark</button>
+          <button type="button" class="btn btn-outline-dark">Dark</button>
+        </div>
       </div>
       <div class="row flex-grow-1">
         <div class="col-12">
