--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -1,6 +1,6 @@
 <div
   class="container-fluid position-relative bg-crema vh-100"
-  style="z-index: -2"
+  style="z-index: 1"
 >
   <div
     class="position-absolute max-width-div bg-custom"
@@ -21,15 +21,33 @@
       </div>
       <div class="row flex-grow-1">
         <div class="col-12">
-          <div class="bg-white rounded-4 mt-5 h-100 box-square">
-            <h5 class="text-light p-5">Client</h5>
+          <div class="bg-white rounded-4 mt-5 h-100 box-square p-3">
+            <div><h2 class="p-3">Select an invoice</h2></div>
+            <div class="row">
+              <div class="col-1 p-3 d-flex">
+                <a href="" class="decoration-remove ms-3">
+                  <i class="fa-solid fa-file-invoice-dollar fs-1"></i>
+                  <p class="fs-4">#1</p>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="col-3">
-      <div class="bg-white rounded-4 mt-5 h-100 box-square">
-        <h5 class="text-light p-5">Client</h5>
+      <div class="bg-white rounded-4 mt-5 h-100 box-square d-flex flex-column">
+        <h3 class="text-dark p-4 flex-grow-1">Client</h3>
+        <div class="flex-grow-1 ps-5">Client name</div>
+        <div class="flex-grow-1 ps-5">Client email</div>
+        <div class="flex-grow-1 ps-5">Vat number</div>
+        <div class="flex-grow-1 ps-5">Client type</div>
+        <div class="flex-grow-1 ps-5">Phone number</div>
+
+        <div>
+          <button class="btn btn-primary">Button 1</button>
+          <button class="btn btn-secondary">Button 2</button>
+        </div>
       </div>
     </div>
   </div>
