--- a/src/app/components/invoices/invoices.component.scss
+++ b/src/app/components/invoices/invoices.component.scss
@@ -7,3 +7,11 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
+
+.decoration-remove {
+  text-decoration: none;
+  color: #18191c;
+}
+.decoration-remove:hover {
+  color: #313139;
+}
