--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -12,22 +12,26 @@
   <div class="row">
     <div class="col-8 d-flex flex-column mx-5 position-relative">
       <div
+        *ngFor="let invoice of response"
         class="bg-white rounded-4 mt-5 flex-grow-1 box-square d-flex align-items-baseline p-3"
       >
         <h3 class="text-dark p-3">Invoice</h3>
-        <h3 class="p-3 text-primary">#1304-0000bd</h3>
+        <h3 class="p-3 text-primary">#{{ invoice.id }}</h3>
         <h5 class="p-3 text-secondary">for</h5>
-        <h3 class="text-dark p-3">$2472.38</h3>
+        <h3 class="text-dark p-3">${{ invoice.amount }}</h3>
       </div>
       <div class="row flex-grow-1">
         <div class="col-12">
           <div class="bg-white rounded-4 mt-5 h-100 box-square p-3">
             <div><h2 class="p-3">Select an invoice</h2></div>
             <div class="row">
-              <div class="col-1 p-3 d-flex">
-                <a href="" class="decoration-remove ms-3">
+              <div class="col-1 p-3 d-flex" *ngFor="let invoice of invoices">
+                <a
+                  href="invoices/{{ invoice.id }}"
+                  class="decoration-remove ms-3"
+                >
                   <i class="fa-solid fa-file-invoice-dollar fs-1"></i>
-                  <p class="fs-4">#1</p>
+                  <p class="fs-4">#{{ invoice.id }}</p>
                 </a>
               </div>
             </div>
@@ -35,14 +39,14 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3" *ngFor="let invoice of response">
       <div class="bg-white rounded-4 mt-5 h-100 box-square d-flex flex-column">
         <h3 class="text-dark p-4 flex-grow-1">Client</h3>
-        <div class="flex-grow-1 ps-5">Client name</div>
-        <div class="flex-grow-1 ps-5">Client email</div>
-        <div class="flex-grow-1 ps-5">Vat number</div>
-        <div class="flex-grow-1 ps-5">Client type</div>
-        <div class="flex-grow-1 ps-5">Phone number</div>
+        <div class="flex-grow-1 ps-5">{{ invoice.client.businessName }}</div>
+        <div class="flex-grow-1 ps-5">{{ invoice.client.email }}</div>
+        <div class="flex-grow-1 ps-5">{{ invoice.client.vatNumber }}</div>
+        <div class="flex-grow-1 ps-5">{{ invoice.client.type }}</div>
+        <div class="flex-grow-1 ps-5">{{ invoice.client.phoneNumber }}</div>
 
         <div>
           <button class="btn btn-primary">Button 1</button>
