--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -1,6 +1,6 @@
 <div
   class="container-fluid position-relative bg-crema vh-100"
-  style="z-index: 1"
+  style="z-index: 2"
 >
   <div
     class="position-absolute max-width-div bg-custom"
@@ -14,6 +14,7 @@
       <div
         *ngFor="let invoice of response"
         class="bg-white rounded-4 mt-5 flex-grow-1 box-square d-flex align-items-baseline p-3"
+        [ngClass]="{ 'show-divs': showDivs }"
       >
         <h3 class="text-dark p-3">Invoice</h3>
         <h3 class="p-3 text-primary">#{{ invoice.id }}</h3>
@@ -29,6 +30,7 @@
                 <a
                   href="invoices/{{ invoice.id }}"
                   class="decoration-remove ms-3"
+                  (click)="showDivs()"
                 >
                   <i class="fa-solid fa-file-invoice-dollar fs-1"></i>
                   <p class="fs-4">#{{ invoice.id }}</p>
