--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -1,16 +1,16 @@
 <div
-  class="container-fluid position-relative bg-crema vh-100"
+  class="container-fluid position-relative bg-custom vh-100"
   style="z-index: 2"
 >
   <div
-    class="position-absolute max-width-div bg-custom"
+    class="position-absolute bg-azure max-width-div bg-"
     style="left: 0; width: 100%; height: 100px; z-index: -1"
-  >
-    <h5 class="text-light p3"></h5>
-  </div>
+  ></div>
 
   <div class="row">
-    <div class="col-8 d-flex flex-column mx-5 position-relative">
+    <div
+      class="col-8 d-flex flex-column mx-5 position-relative slide-in-fwd-center"
+    >
       <div
         *ngFor="let invoice of response"
         class="bg-white rounded-4 mt-5 flex-grow-1 box-square d-flex align-items-baseline p-3"
