--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,7 +23,7 @@
             <div class="mb-3">
               <label for="email" class="form-label text-info">Email</label>
               <div class="position-relative">
-                <div class="position-absolute end-0 mt-1 me-2">
+                <div class="position-absolute end-0 mt-1 me-2 z-1">
                   <i class="fa-solid fa-envelope text-info"></i>
                 </div>
                 <input
