--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+body {
+  background-color: #1f2125;
+}
