--- a/src/app/components/invoices/invoices.component.html
+++ b/src/app/components/invoices/invoices.component.html
@@ -11,7 +11,7 @@
     <div class="col-8 d-flex flex-column mx-5 position-relative">
       <div
         *ngFor="let invoice of response"
-        class="bg-white rounded-4 mt-5 flex-grow-1 box-square d-flex align-items-baseline p-3 scale-up-left"
+        class="bg-white rounded-4 mt-5 flex-grow-1 box-square d-flex align-items-baseline p-3 shadow-inset-center"
       >
         <h3 class="text-dark p-3">Invoice</h3>
         <h3 class="p-3 text-primary">#{{ invoice.id }}</h3>
@@ -21,7 +21,7 @@
       <div class="row flex-grow-1">
         <div class="col-12">
           <div
-            class="bg-white rounded-4 mt-5 h-100 box-square p-3 scale-up-left"
+            class="bg-white rounded-4 mt-5 h-100 box-square p-3 shadow-inset-center"
           >
             <div><h2 class="p-3">Select an invoice</h2></div>
             <div class="row">
@@ -47,7 +47,7 @@
     </div>
     <div class="col-3" *ngFor="let invoice of response">
       <div
-        class="bg-white rounded-4 mt-5 h-100 box-square d-flex flex-column scale-up-left"
+        class="bg-white rounded-4 mt-5 h-100 box-square d-flex flex-column shadow-inset-center"
       >
         <h3 class="text-dark p-4 flex-grow-1">Client</h3>
         <div class="flex-grow-1 ps-5">{{ invoice.client.businessName }}</div>
