styled user page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,10 +26,10 @@
           <a
             *ngIf="userLoggedIn"
             class="nav-link"
-            [routerLink]="['/']"
+            [routerLink]="['/user']"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
-            >Back-Office
+            >Users
           </a>
           <a
             *ngIf="!userLoggedIn"
