--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -50,7 +50,10 @@
         </div>
       </div>
       <div class="d-none d-md-flex" *ngIf="userLoggedIn">
-        <button class="btn btn-outline-danger h-100" (click)="logout()">
+        <button
+          class="btn btn-outline-danger h-100 rounded-5"
+          (click)="logout()"
+        >
           <i class="bi bi-box-arrow-right"></i>
         </button>
       </div>
